# table-reader-bank

./: .env.example  .gitignore  CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: TESSERACT_TRAINING_WORKFLOW.md  lessons.md
table_reader/: __init__.py  config.py  constants.py  data_cleaning.py  export.py  extraction.py  ocr.py  summary.py
table_reader/lib/: __init__.py  image.py  text.py
tasks/: correct_ground_truth.py  export_ground_truth.py  review_ground_truth.py
tasks/ground_truth/: Estado_de_cuenta_abril_p1_t2_r10_c1_date2.gt.txt  Estado_de_cuenta_abril_p1_t2_r11_c0_date1.gt.txt  Estado_de_cuenta_abril_p1_t2_r12_c0_date1.gt.txt  Estado_de_cuenta_abril_p1_t2_r12_c4_amount.gt.txt  Estado_de_cuenta_abril_p1_t2_r13_c4_amount.gt.txt  Estado_de_cuenta_abril_p1_t2_r16_c0_date1.gt.txt  Estado_de_cuenta_abril_p1_t2_r16_c1_date2.gt.txt  Estado_de_cuenta_abril_p1_t2_r16_c4_amount.gt.txt  Estado_de_cuenta_abril_p1_t2_r17_c0_date1.gt.txt  Estado_de_cuenta_abril_p1_t2_r17_c4_amount.gt.txt  Estado_de_cuenta_abril_p1_t2_r18_c4_amount.gt.txt  Estado_de_cuenta_abril_p1_t2_r20_c1_date2.gt.txt  Estado_de_cuenta_abril_p1_t2_r20_c4_amount.gt.txt  Estado_de_cuenta_abril_p1_t2_r22_c4_amount.gt.txt  Estado_de_cuenta_abril_p1_t2_r24_c4_amount.gt.txt  Estado_de_cuenta_abril_p1_t2_r25_c4_amount.gt.txt  Estado_de_cuenta_abril_p1_t2_r26_c0_date1.gt.txt  Estado_de_cuenta_abril_p1_t2_r26_c4_amount.gt.txt  Estado_de_cuenta_abril_p1_t2_r28_c0_date1.gt.txt  (+164 more)
utils/: config.py  data_cleaning.py  export.py  extraction.py  ocr.py  summary.py
